--- a/index.html
+++ b/index.html
@@ -14,140 +14,100 @@
             --border-color: #e5e5e5;
         }
 
-        /* --- ЗАГРУЗОЧНЫЙ ЭКРАН --- */
+        /* --- ПРЕЛОАДЕР --- */
         #preloader {
-            position: fixed;
-            top: 0; left: 0;
-            width: 100%; height: 100%;
-            background-color: white;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            z-index: 10000;
-            transition: opacity 0.4s ease-out, filter 0.4s ease-out, visibility 0.4s;
+            position: fixed; top: 0; left: 0; width: 100%; height: 100%;
+            background-color: white; display: flex; justify-content: center; align-items: center;
+            z-index: 10000; transition: opacity 0.4s ease-out, filter 0.4s ease-out, visibility 0.4s;
         }
         #preloader.fade-out { opacity: 0; filter: blur(15px); visibility: hidden; }
         .loading-image { width: 100%; max-width: 380px; height: auto; padding-left: 20px; box-sizing: border-box; }
 
-        /* --- ЭФФЕКТ ЗАТЕМНЕНИЯ ДЛЯ ПОИСКА --- */
-        #search-overlay {
-            position: fixed;
-            top: 0; left: 0;
-            width: 100%; height: 100%;
-            background: rgba(0, 0, 0, 0.5);
-            z-index: 1500;
-            display: none; /* Скрыт по умолчанию */
-            opacity: 0;
-            transition: opacity 0.3s ease;
-            backdrop-filter: blur(2px);
-        }
-
         body {
-            background-color: var(--bg-color);
-            margin: 0; padding: 0;
+            background-color: var(--bg-color); margin: 0; padding: 0;
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-            color: var(--text-dark);
-            padding-bottom: 100px;
-            -webkit-font-smoothing: antialiased;
-            overflow-x: hidden;
-            user-select: none;
+            color: var(--text-dark); padding-bottom: 100px; -webkit-font-smoothing: antialiased;
+            overflow-x: hidden; user-select: none;
         }
 
-        /* 1. ШАПКА И ПОИСК */
-        .search-wrapper {
-            position: sticky; top: 0;
-            background-color: white; padding: 12px 15px;
-            display: flex; align-items: center; gap: 12px;
-            border-bottom: 1px solid #f0f0f0; z-index: 2000;
-            transition: all 0.3s ease;
+        /* --- ЛОГИКА ПОИСКОВОГО РЕЖИМА --- */
+        /* Скрываем всё лишнее, когда активирован поиск */
+        body.search-mode .banners-container,
+        body.search-mode .services-grid,
+        body.search-mode .promo-scroll-area,
+        body.search-mode .divider-line,
+        body.search-mode .section-title,
+        body.search-mode .history-scroll,
+        body.search-mode .tab-bar,
+        body.search-mode .header-extra-icon {
+            display: none !important;
         }
+
+        body.search-mode { background-color: white; }
+
+        /* Шапка в режиме поиска */
+        .search-wrapper {
+            position: sticky; top: 0; background-color: white;
+            padding: 12px 15px; display: flex; align-items: center; gap: 10px;
+            border-bottom: 1px solid #f0f0f0; z-index: 2000;
+        }
+
         .search-bar {
             background-color: #f0f0f2; border-radius: 10px;
             padding: 8px 12px; display: flex; align-items: center; gap: 10px; flex: 1;
-            border: 1px solid transparent; transition: all 0.3s ease;
+            transition: background-color 0.2s;
         }
-        /* Стиль при фокусе на поиске */
-        .search-wrapper.active { padding-right: 70px; } /* Место для кнопки "Отмена", если захочешь добавить */
-        .search-bar.active { background-color: #fff; border-color: var(--kaspi-red); box-shadow: 0 2px 8px rgba(0,0,0,0.1); }
-        
+
+        body.search-mode .search-bar { background-color: #f0f0f2; }
+
         .search-bar input {
             border: none; background: transparent; outline: none;
-            width: 100%; font-size: 15px; color: var(--text-dark);
+            width: 100%; font-size: 16px; color: var(--text-dark);
         }
-        .search-bar input::placeholder { color: var(--gray-text); }
+
+        /* Кнопка Отмена (скрыта по умолчанию) */
+        .cancel-btn {
+            display: none; color: var(--kaspi-red); font-size: 15px;
+            font-weight: 500; white-space: nowrap; cursor: pointer;
+        }
+        body.search-mode .cancel-btn { display: block; }
+
         .search-icon { width: 16px; height: 16px; opacity: 0.5; }
         .header-extra-icon { width: 22px; height: 22px; object-fit: contain; }
 
-        /* 2. РЕКЛАМНЫЕ БАННЕРЫ */
+        /* --- ОСТАЛЬНЫЕ СТИЛИ (БЕЗ ИЗМЕНЕНИЙ) --- */
         .banners-container { background-color: white; padding: 5px 0 10px; }
-        .banners-scroll {
-            display: flex; overflow-x: auto; padding: 0 15px; gap: 8px;
-            -webkit-overflow-scrolling: touch; scroll-snap-type: x mandatory;
-        }
-        .banners-scroll::-webkit-scrollbar { display: none; }
-        .banner-item {
-            flex: 0 0 54%; aspect-ratio: 1080 / 680; border-radius: 12px;
-            background-position: center; background-size: cover; scroll-snap-align: center;
-        }
-
-        /* 3. СЕРВИСЫ */
-        .services-grid {
-            display: grid; grid-template-columns: repeat(4, 1fr);
-            background: white; padding: 10px 5px 15px; gap: 20px 0;
-        }
+        .banners-scroll { display: flex; overflow-x: auto; padding: 0 15px; gap: 8px; }
+        .banner-item { flex: 0 0 54%; aspect-ratio: 1080 / 680; border-radius: 12px; background-size: cover; }
+        .services-grid { display: grid; grid-template-columns: repeat(4, 1fr); background: white; padding: 10px 5px 15px; gap: 20px 0; }
         .service-item { display: flex; flex-direction: column; align-items: center; text-align: center; }
         .icon-wrapper { height: 48px; width: 48px; display: flex; align-items: center; justify-content: center; margin-bottom: 8px; }
         .service-icon { width: 42px; height: 42px; object-fit: contain; filter: drop-shadow(0 0 1px rgba(255, 45, 23, 0.1)); }
-        .service-name { font-size: 11.5px; font-weight: 700; color: #111; letter-spacing: -0.2px; }
+        .service-name { font-size: 11.5px; font-weight: 700; color: #111; }
 
-        /* 4. ПРОМО КАРУСЕЛЬ */
         .promo-scroll-area { margin-top: 12px; overflow-x: auto; padding-bottom: 10px; }
-        .promo-scroll-area::-webkit-scrollbar { display: none; }
-        .promo-grid-container {
-            display: grid; grid-template-rows: repeat(2, 1fr);
-            grid-auto-flow: column; grid-auto-columns: max-content;
-            gap: 10px; padding: 0 15px;
-        }
-        .promo-card {
-            background: white; border-radius: 14px; padding: 10px 15px;
-            display: flex; align-items: center; gap: 10px; min-width: 210px;
-        }
+        .promo-grid-container { display: grid; grid-template-rows: repeat(2, 1fr); grid-auto-flow: column; grid-auto-columns: max-content; gap: 10px; padding: 0 15px; }
+        .promo-card { background: white; border-radius: 14px; padding: 10px 15px; display: flex; align-items: center; gap: 10px; min-width: 210px; }
         .promo-img { width: 36px; height: 36px; object-fit: contain; }
         .promo-main-text { font-size: 14px; font-weight: 700; }
-        .promo-subtext { font-size: 11px; color: var(--gray-text); }
 
-        /* 5. ИСТОРИЯ ПРОСМОТРОВ */
         .divider-line { height: 1px; background-color: var(--border-color); margin: 15px 15px 10px 15px; }
-        .section-title { font-size: 17px; font-weight: 800; margin: 0 15px 12px 15px; color: var(--text-dark); }
-        .history-scroll { overflow-x: auto; -webkit-overflow-scrolling: touch; padding-bottom: 20px; }
-        .history-scroll::-webkit-scrollbar { display: none; }
-        .history-grid {
-            display: grid; grid-template-rows: repeat(2, 1fr);
-            grid-auto-flow: column; grid-auto-columns: 145px;
-            gap: 10px; padding: 0 15px;
-        }
-        .product-card {
-            background: white; border-radius: 12px; padding: 8px;
-            display: flex; flex-direction: column; height: 190px; box-sizing: border-box;
-        }
-        .product-img { width: 100%; height: 115px; object-fit: contain; margin-bottom: 4px; }
-        .product-title {
-            font-size: 12px; line-height: 1.2; height: 28px; overflow: hidden;
-            display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical;
-            margin-bottom: 4px; color: #333;
-        }
-        .product-price { font-size: 14px; font-weight: 800; color: var(--text-dark); margin-top: auto; }
+        .section-title { font-size: 17px; font-weight: 800; margin: 0 15px 12px 15px; }
+        .history-scroll { overflow-x: auto; padding-bottom: 20px; }
+        .history-grid { display: grid; grid-template-rows: repeat(2, 1fr); grid-auto-flow: column; grid-auto-columns: 145px; gap: 10px; padding: 0 15px; }
+        .product-card { background: white; border-radius: 12px; padding: 8px; display: flex; flex-direction: column; height: 190px; box-sizing: border-box; }
+        .product-img { width: 100%; height: 115px; object-fit: contain; }
+        .product-price { font-size: 14px; font-weight: 800; margin-top: auto; }
 
-        /* 6. ТАБ-БАР */
         .tab-bar {
             position: fixed; bottom: 0; left: 0; right: 0;
             background: white; display: grid; grid-template-columns: repeat(4, 1fr);
             height: 65px; align-items: center; border-top: 1px solid #e5e5e5; z-index: 3000;
             padding-bottom: env(safe-area-inset-bottom);
         }
-        .tab-item { display: flex; flex-direction: column; align-items: center; font-size: 10px; color: var(--gray-text); gap: 4px; }
+        .tab-item { display: flex; flex-direction: column; align-items: center; font-size: 10px; color: var(--gray-text); }
         .tab-item.active { color: var(--kaspi-red); font-weight: 700; }
-        .tab-icon-img { width: 26px; height: 26px; object-fit: contain; opacity: 0.4; filter: grayscale(100%); }
+        .tab-icon-img { width: 26px; height: 26px; opacity: 0.4; filter: grayscale(100%); }
         .tab-item.active .tab-icon-img { opacity: 1; filter: grayscale(0%); }
     </style>
 </head>
@@ -157,13 +117,12 @@
         <img src="loading.png" class="loading-image">
     </div>
 
-    <div id="search-overlay" onclick="closeSearch()"></div>
-
-    <div class="search-wrapper" id="header">
-        <div class="search-bar" id="searchBar">
+    <div class="search-wrapper">
+        <div class="search-bar">
             <img src="magnifier.png" class="search-icon">
-            <input type="text" id="searchInput" placeholder="Поиск по Kaspi.kz" onfocus="openSearch()" onblur="setTimeout(closeSearch, 100)">
+            <input type="text" id="searchInput" placeholder="Поиск по Kaspi.kz" onfocus="enableSearchMode()">
         </div>
+        <div class="cancel-btn" onclick="disableSearchMode()">Отмена</div>
         <img src="silvershop.png" class="header-extra-icon">
     </div>
 
@@ -189,10 +148,10 @@
 
     <div class="promo-scroll-area">
         <div class="promo-grid-container">
-            <div class="promo-card" onclick="vibrate()"><img src="red.png" class="promo-img"><div class="promo-text-container"><div class="promo-main-text">Рассрочка 0-0-12</div><div class="promo-subtext">Покупки</div></div></div>
-            <div class="promo-card" onclick="vibrate()"><img src="credit.png" class="promo-img"><div class="promo-text-container"><div class="promo-main-text">Кредит наличными</div><div class="promo-subtext">на Kaspi Gold</div></div></div>
-            <div class="promo-card" onclick="vibrate()"><img src="deposit.png" class="promo-img"><div class="promo-text-container"><div class="promo-main-text">Депозит</div><div class="promo-subtext">Эффективная ставка 15%</div></div></div>
-            <div class="promo-card" onclick="vibrate()"><img src="magnum.png" class="promo-img"><div class="promo-text-container"><div class="promo-main-text">Magnum</div><div class="promo-subtext">Продукты с доставкой</div></div></div>
+            <div class="promo-card" onclick="vibrate()"><img src="red.png" class="promo-img"><div class="promo-main-text">Рассрочка 0-0-12</div></div>
+            <div class="promo-card" onclick="vibrate()"><img src="credit.png" class="promo-img"><div class="promo-main-text">Кредит наличными</div></div>
+            <div class="promo-card" onclick="vibrate()"><img src="deposit.png" class="promo-img"><div class="promo-main-text">Депозит</div></div>
+            <div class="promo-card" onclick="vibrate()"><img src="magnum.png" class="promo-img"><div class="promo-main-text">Magnum</div></div>
         </div>
     </div>
 
@@ -201,16 +160,10 @@
 
     <div class="history-scroll">
         <div class="history-grid">
-            <div class="product-card" onclick="vibrate()"><img src="minoxidil.png" class="product-img"><div class="product-title">Миноксидил 5% для роста бороды</div><div class="product-price">4 500 ₸</div></div>
-            <div class="product-card" onclick="vibrate()"><img src="smartglasses.png" class="product-img"><div class="product-title">Смарт-очки Bluetooth 5.0</div><div class="product-price">12 990 ₸</div></div>
-            <div class="product-card" onclick="vibrate()"><img src="mezoroller.png" class="product-img"><div class="product-title">Мезороллер для лица 0.5 мм</div><div class="product-price">2 300 ₸</div></div>
-            <div class="product-card" onclick="vibrate()"><img src="marshallmajor.png" class="product-img"><div class="product-title">Marshall Major IV Black</div><div class="product-price">68 000 ₸</div></div>
-            <div class="product-card" onclick="vibrate()"><img src="microphone.png" class="product-img"><div class="product-title">Микрофон Fifine Studio</div><div class="product-price">18 500 ₸</div></div>
-            <div class="product-card" onclick="vibrate()"><img src="creedaventus.png" class="product-img"><div class="product-title">Creed Aventus Парфюм 100мл</div><div class="product-price">145 000 ₸</div></div>
-            <div class="product-card" onclick="vibrate()"><img src="foam.png" class="product-img"><div class="product-title">Пенка для умывания мягкая</div><div class="product-price">3 200 ₸</div></div>
-            <div class="product-card" onclick="vibrate()"><img src="casio.png" class="product-img"><div class="product-title">Часы Casio Vintage Silver</div><div class="product-price">24 900 ₸</div></div>
-            <div class="product-card" onclick="vibrate()"><img src="case.png" class="product-img"><div class="product-title">Чехол Silicone Case iPhone</div><div class="product-price">1 500 ₸</div></div>
-            <div class="product-card" onclick="vibrate()"><img src="jbl.png" class="product-img"><div class="product-title">Колонка JBL Flip 6</div><div class="product-price">49 990 ₸</div></div>
+            <div class="product-card" onclick="vibrate()"><img src="minoxidil.png" class="product-img"><div class="product-price">4 500 ₸</div></div>
+            <div class="product-card" onclick="vibrate()"><img src="smartglasses.png" class="product-img"><div class="product-price">12 990 ₸</div></div>
+            <div class="product-card" onclick="vibrate()"><img src="mezoroller.png" class="product-img"><div class="product-price">2 300 ₸</div></div>
+            <div class="product-card" onclick="vibrate()"><img src="marshallmajor.png" class="product-img"><div class="product-price">68 000 ₸</div></div>
         </div>
     </div>
 
@@ -225,38 +178,29 @@
         const tg = window.Telegram.WebApp;
         tg.ready(); tg.expand();
 
-        // 1. ПРЕЛОАДЕР (1 сек)
+        // Прелоадер
         window.addEventListener('load', () => {
             setTimeout(() => {
                 const loader = document.getElementById('preloader');
                 loader.classList.add('fade-out');
                 setTimeout(() => loader.style.display = 'none', 400);
-            }, 1000); 
+            }, 1000);
         });
 
-        // 2. ЛОГИКА ПОИСКА
-        const overlay = document.getElementById('search-overlay');
-        const searchBar = document.getElementById('searchBar');
-        const header = document.getElementById('header');
-
-        function openSearch() {
+        // Управление режимом поиска
+        function enableSearchMode() {
             vibrate();
-            overlay.style.display = 'block';
-            setTimeout(() => {
-                overlay.style.opacity = '1';
-                searchBar.classList.add('active');
-            }, 10);
+            document.body.classList.add('search-mode');
+            // В Mini App полезно вызвать прокрутку вверх, чтобы клавиатура не сместила верстку
+            window.scrollTo(0, 0);
         }
 
-        function closeSearch() {
-            overlay.style.opacity = '0';
-            searchBar.classList.remove('active');
-            setTimeout(() => {
-                overlay.style.display = 'none';
-            }, 300);
+        function disableSearchMode() {
+            document.body.classList.remove('search-mode');
+            document.getElementById('searchInput').value = '';
+            document.getElementById('searchInput').blur(); // Убираем клавиатуру
         }
 
-        // 3. ВСПОМОГАТЕЛЬНЫЕ ФУНКЦИИ
         function vibrate() { tg.HapticFeedback.impactOccurred('light'); }
         function switchTab(el) {
             vibrate();
